<resources>
    <string name="app_name">Si Comparto</string>
    <string name="facebook_app_id">2134015680049427</string>
    <string name="fb_login_protocol_scheme">fb2134015680049427</string>

    <string name="app_dash_hazQueTu"> "Haz que tu</string>
    <string name="app_dash_comidaCuente">comida cuente"</string>
    <string name="app_dash_donarAlimento">Donar \n alimento</string>
    <string name="app_dash_recibirAlimento">Recibir \n alimento</string>
    <string name="app_dash_aQuienes">¿A quiénes \n Ayudamos?</string>


    <string name="title_activity__donar">Activity_Donar</string>
    <string name="title_info">Info</string>
    <string name="title_dona">Dona</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_queHacemos">¿Qué hacemos?</string>


    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="rfc">RFC</string>
    <string name="curp">CURP</string>
    <string name="razon_social">Razon Social</string>
    <string name="enviar">Enviar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>


    <string name="comenzar">Comenzar</string>
    <string name="Frente">Frente</string>
    <string name="Vuelta">Vuelta</string>
    <string name="subeFoto">Sube foto INE o Alguna identificación Oficial</string>
    <string name="ineEnMano">Sube foto tuya con tu INE en la mano </string>
    <string name="conLaFoto">Con la fotografía viendo hacia el frente</string>
    <string name="promedioKg">¿Promedio de kg desperdiciado?</string>

    <string name="Selecciona_imagen">Selecciona imagen</string>

    <string name="codigo_soyEmpresa">Soy Empresa</string>
    <string name="codigo_soyEmpresa_desc">Restaurante, o cualquier empresa del \n sector alimenticio</string>
    <string name="codigo_soyPersona_desc">Cualquier persona con residencia \n en Guadalajara, Jalisco</string>
    <string name="codigo_soyPersona">Soy Persona</string>
    <string name="title_activity_registro_donador">Registro Donador</string>
    <string name="title_activity_registro_donador_nombre">Nombre de responsable</string>
    <string name="title_activity_registro_donador_empresa_nombre">Nombre de empresa</string>
    <string name="title_activity_registro_donador_empresa_descripcion">Descripción breve de servicios de su empresa</string>
    <string name="title_activity_facturacion">Datos de Facturacion</string>

    <string name="registro_organizacion_title">Registro Organización</string>
    <string name="registro_organizacion_nombre">Nombre de Organización</string>
    <string name="registro_organizacion_causa">¿Cuál es su causa?</string>
    <string name="registro_organizacion_personas">¿Cuántas personas atienden?</string>
    <string name="registro_organizacion_descripción">Misión de su organización</string>

    <string name="title_solicitud">Solicitud</string>
    <string name="title_categoria">Elige categoria</string>
    <string name="verdura">Verdura</string>
    <string name="lacteos">Lácteos</string>
    <string name="cereales">Cereales</string>
    <string name="carnes_rojas">Carnes Rojas</string>
    <string name="carnes_blancas">Carnes Blancas</string>
    <string name="comida_rapida">Cómida rápida</string>
    <string name="mermelada_cremas">Mermelada/Cremas</string>
    <string name="condimentos">Condimentos</string>
    <string name="cafe">Café</string>
    <string name="pasteles">Pasteles</string>
    <string name="enlatados">Enlatados</string>
    <string name="agua">Agua</string>
    <string name="dulces">Dulces</string>
    <string name="jugos">Jugos</string>
    <string name="leguminosas">Leguminosas</string>
    <string name="procesados">Alimento procesado</string>

</resources>
