<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroDonador3">

    <TextView
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:text="@string/title_activity_facturacion"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_regFac_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_left_margin"
        android:layout_gravity=""/>

    <EditText
    android:id="@+id/activity_regFac_RFC"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_left_margin"
    android:layout_marginRight="@dimen/activity_left_margin"
    android:hint="@string/rfc" />

    <EditText
        android:id="@+id/activity_regFac_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_left_margin"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/activity_regFac_curp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_left_margin"
        android:hint="@string/curp"/>

    <EditText
        android:id="@+id/activity_regFac_razon_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_left_margin"
        android:hint="@string/razon_social" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/activity_regFac_enviar"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:text="@string/enviar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="@color/colorYoSiDOno"/>

    </RelativeLayout>


</LinearLayout>