<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroDonador2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_registro_donador"
        android:layout_marginTop="@dimen/activity_left_margin"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subeFoto"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Frente"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ine"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vuelta"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ine"
        />

    <TextView
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginTop="30dp"
        android:text="@string/ineEnMano"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:text="@string/conLaFoto"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />

    <Button
        android:id="@+id/activity_regIdent_arrowNext"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:drawableStart="@mipmap/arrow_next" />

</LinearLayout>