<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Dashboard"
    android:background="#FBFBFB"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-46dp"
        android:text="@string/app_dash_hazQueTu"
        android:textSize="30sp"
        android:textColor="#026B3C"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-46dp"
        android:text="@string/app_dash_comidaCuente"
        android:textSize="23sp"
        android:textColor="#026B3C"/>

    <Button
        android:id="@+id/activity_dashboard_donar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:drawableLeft="@mipmap/donar_foreground"
        android:text="@string/app_dash_donarAlimento"
        android:background="@drawable/btn_comenzar_background_blanco"
        android:textColor="#2ADA8C"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/activity_dashboard_recibir"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:drawableLeft="@mipmap/recibir_foreground"
        android:text="@string/app_dash_recibirAlimento"
        android:background="@drawable/btn_comenzar_background_blanco"
        android:textColor="#2ADA8C"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/activity_dashboard_aQuienesAyudamos"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="385dp"
        android:drawableLeft="@mipmap/heroe_foreground"
        android:text="@string/app_dash_aQuienes"
        android:background="@drawable/btn_comenzar_background_blanco"
        android:textColor="#2ADA8C"

        />

</RelativeLayout>