<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_general_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/verdura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/verdura"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/verdura"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/lacteos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/lacteos"
                android:checked="true"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lacteos"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/cereales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/cereales"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cereales"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/carnes_rojas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/carnes_rojas"
                android:checked="true"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/steak"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/carnes_blancas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/carnes_blancas"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pescado"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/comida_rapida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/comida_rapida"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rapida" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/mermelada_crema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/mermelada_cremas"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mermelada"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/condimentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/condimentos"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/condimentos"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/cafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/cafe"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cafe"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/pasteles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/pasteles"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pasteles"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/enlatados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/enlatados"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/enlatados"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/agua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/agua"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/agua"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/dulces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/dulces"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dulces"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/jugos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/jugos"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/jugos"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/leguminosas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/leguminosas"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/leguminosas"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_categorias_padding">

            <CheckBox
                android:id="@+id/alimentos_procesados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/greenMain"
                android:hint="@string/procesados"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/procesados"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/activity_solicitud_categorias_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_baseline_arrow_forward_24px"
            android:backgroundTint="@color/greenMain"
            />


    </LinearLayout>


</ScrollView>